[gd_scene load_steps=7 format=3 uid="uid://biug8ayymofq7"]

[ext_resource type="Script" path="res://scripts/Global.gd" id="1_wybty"]

[sub_resource type="Animation" id="1"]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0313726, 0.0941176, 0.12549, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="3"]
resource_name = "FadeInDeath"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0313726, 0.0941176, 0.12549, 0), Color(0.670588, 0.160784, 0.0431373, 1)]
}

[sub_resource type="Animation" id="2"]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0.0313726, 0.0941176, 0.12549, 0)]
}

[sub_resource type="Animation" id="4"]
resource_name = "FadeOutDeath"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.670588, 0.160784, 0.0431373, 1), Color(0.0313726, 0.0941176, 0.12549, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tefv0"]
_data = {
"FadeIn": SubResource("1"),
"FadeInDeath": SubResource("3"),
"FadeOut": SubResource("2"),
"FadeOutDeath": SubResource("4")
}

[node name="Global" type="Node2D"]
position = Vector2(0, 3)
script = ExtResource("1_wybty")
current_level = null
levels = null

[node name="BGM" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="BGS" type="AudioStreamPlayer" parent="."]

[node name="Sfx01" type="AudioStreamPlayer" parent="."]

[node name="Sfx02" type="AudioStreamPlayer" parent="."]

[node name="Sfx03" type="AudioStreamPlayer" parent="."]

[node name="Sfx04" type="AudioStreamPlayer" parent="."]

[node name="Sfx05" type="AudioStreamPlayer" parent="."]

[node name="Sfx06" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.5732
offset_top = 19.0488
offset_right = -28.5732
offset_bottom = 19.0488
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.0941176, 0.12549, 0)

[node name="Score" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.384314)

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -149.0
offset_right = 275.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 80
theme_override_font_sizes/bold_font_size = 0
text = "Arrows Dodge"

[node name="scoreLbl" type="RichTextLabel" parent="CanvasLayer/Control/Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -8.0
offset_right = 412.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 80
theme_override_font_sizes/bold_font_size = 0
text = "0"

[node name="AnimFade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tefv0")
}
